browser/metro/theme/forms.css
%
filter
substitution
%
include
defines
.
inc
#
content
-
navigator
{
background
-
color
:
metro_orange
;
padding
:
0
;
pointer
-
events
:
none
;
}
#
content
-
navigator
>
toolbar
{
min
-
height
:
findbar_height
!
important
;
}
#
content
-
navigator
>
.
previous
-
button
#
content
-
navigator
>
.
next
-
button
#
content
-
navigator
>
.
close
-
button
{
list
-
style
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
images
/
appbar
-
icons
.
png
)
;
min
-
width
:
touch_button_small
!
important
;
min
-
height
:
touch_button_small
!
important
;
border
:
none
!
important
;
background
-
image
:
none
!
important
;
background
-
color
:
inherit
!
important
;
pointer
-
events
:
auto
;
-
moz
-
user
-
focus
:
ignore
!
important
;
margin
:
0
margin_normal
!
important
;
}
#
content
-
navigator
>
.
close
-
button
{
-
moz
-
margin
-
start
:
0
;
-
moz
-
image
-
region
:
rect
(
0px
480px
40px
440px
)
;
}
#
content
-
navigator
>
.
close
-
button
:
hover
{
-
moz
-
image
-
region
:
rect
(
40px
480px
80px
440px
)
;
}
#
content
-
navigator
>
.
close
-
button
:
active
{
-
moz
-
image
-
region
:
rect
(
80px
480px
120px
440px
)
;
}
#
content
-
navigator
>
.
previous
-
button
{
-
moz
-
margin
-
end
:
0
;
-
moz
-
image
-
region
:
rect
(
0px
400px
40px
360px
)
;
}
#
content
-
navigator
>
.
previous
-
button
:
hover
{
-
moz
-
image
-
region
:
rect
(
40px
400px
80px
360px
)
;
}
#
content
-
navigator
>
.
previous
-
button
:
active
{
-
moz
-
image
-
region
:
rect
(
80px
400px
120px
360px
)
;
}
#
content
-
navigator
>
.
next
-
button
{
-
moz
-
margin
-
start
:
0
;
-
moz
-
image
-
region
:
rect
(
0px
440px
40px
400px
)
;
}
#
content
-
navigator
>
.
next
-
button
:
hover
{
-
moz
-
image
-
region
:
rect
(
40px
440px
80px
400px
)
;
}
#
content
-
navigator
>
.
next
-
button
:
active
{
-
moz
-
image
-
region
:
rect
(
80px
440px
120px
400px
)
;
}
#
find
-
helper
-
textbox
{
pointer
-
events
:
auto
;
-
moz
-
margin
-
end
:
0
;
border
:
none
!
important
;
width
:
20em
;
}
.
textbox
-
search
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
search
-
glass
-
30
.
png
"
)
;
-
moz
-
image
-
region
:
auto
;
}
#
find
-
helper
-
textbox
input
{
-
moz
-
box
-
ordinal
-
group
:
2
}
#
find
-
helper
-
textbox
deck
{
margin
-
right
:
margin_normal
;
}
#
find
-
helper
-
textbox
[
status
=
"
1
"
]
{
background
:
rgb
(
255
200
200
)
;
}
#
find
-
helper
-
textbox
:
hover
:
active
{
background
:
#
8db8d8
;
}
#
select
-
container
{
padding
:
0
;
position
:
absolute
;
background
-
color
:
transparent
;
}
#
select
-
commands
{
-
moz
-
appearance
:
none
;
background
-
color
:
white
;
border
:
#
000
solid
metro_border_thick
;
display
:
-
moz
-
box
;
-
moz
-
user
-
focus
:
ignore
;
-
moz
-
box
-
align
:
stretch
;
width
:
100
%
;
}
#
select
-
commands
.
option
-
command
>
listcell
{
-
moz
-
box
-
flex
:
1
!
important
;
}
.
option
-
command
{
min
-
height
:
touch_button_small
;
min
-
width
:
touch_action_minwidth
;
border
:
0
none
;
}
.
option
-
command
.
selected
{
background
-
color
:
selected_color
!
important
;
color
:
black
;
}
.
option
-
command
.
optgroup
{
font
-
weight
:
bold
;
font
-
style
:
italic
;
pointer
-
events
:
none
;
}
.
option
-
command
:
not
(
[
disabled
]
)
:
hover
{
background
-
color
:
#
dedad0
;
color
:
black
;
}
.
option
-
command
:
not
(
[
disabled
]
)
:
active
{
background
-
color
:
selected_color
!
important
;
color
:
black
;
}

